--- a/css/responsive.css
+++ b/css/responsive.css
@@ -669,6 +669,8 @@
   .detail-images {
     padding-top: 20px;
   }
+
+  /*====================================================================== contact*/
 }
 
 /*# sourceMappingURL=responsive.css.map */
