--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -654,6 +654,7 @@
   .detail-images {
     padding-top: 20px;
   }
+  /*====================================================================== contact*/
 }
 
 // danh cho man hinh duoi 400px
