--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -176,6 +176,17 @@
     height: 12px;
     background-position: -77px -89px;
   }
+
+  &.icon-ttvbig {
+    width: 30px;
+    height: 16px;
+    background-position: -26px -465px;
+  }
+  &.icon-etimebig {
+    width: 28px;
+    height: 27px;
+    background-position: -79px -459px;
+  }
 }
 .iconnew-tgtt {
   background: url("../images/icons-27052020.webp") no-repeat -54px 0;
