--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -589,3 +589,12 @@ img {
 .d-2xl-flex {
   display: flex;
 }
+.align-items-center {
+  align-items: center;
+}
+.justify-content-between {
+  justify-content: space-between;
+}
+.justify-content-center {
+  justify-content: center;
+}
