--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,11 @@ img {
   margin: 0 auto;
 }
 
+.w-1140 {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -1844,7 +1849,7 @@ header #nav .icon-expandmenu.active {
 
 .hightlight-top {
   display: grid;
-  grid-template-columns: 425px 1fr;
+  grid-template-columns: 530px 1fr;
   grid-gap: 26px;
 }
 
@@ -3823,6 +3828,10 @@ input#_login_email {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+#back-top .icon {
+  width: 16px;
+  height: auto;
+}
 
 .title {
   display: block;
@@ -3968,6 +3977,681 @@ input#_login_email {
 }
 #bottom-bar li.active .text {
   color: #008837;
+}
+
+@media (max-width: 80em) {
+  .d-xl-none {
+    display: none;
+  }
+
+  .d-xl-block {
+    display: block;
+  }
+
+  .d-xl-flex {
+    display: flex;
+  }
+
+  /*-------------------------------------------------------------*/
+}
+@media (max-width: 64em) {
+  .d-lg-none {
+    display: none;
+  }
+
+  .d-lg-block {
+    display: block;
+  }
+
+  .d-lg-flex {
+    display: flex;
+  }
+
+  .hightlight-top,
+.topic-list {
+    max-width: 650px;
+  }
+
+  /*-------------------------------------------------------------*/
+}
+@media (max-width: 62em) {
+  .hightlight-top,
+.topic-list {
+    max-width: 450px;
+  }
+
+  /*-------------------------------------------------------------index*/
+  .main-top,
+.main-secondary,
+.main-third,
+.footer {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .main-topic .topic-list {
+    width: 50%;
+  }
+
+  /*-------------------------------------------------------------cate*/
+  .breadcum,
+.talk-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .cate-block .main-secondary,
+.detail-block .main-secondary {
+    display: block;
+  }
+
+  .read-lot {
+    max-width: 100%;
+  }
+
+  /*-------------------------------------------------------------detail*/
+  .box-cmt {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .hot-news-container {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+@media (max-width: 48em) {
+  .d-md-none {
+    display: none;
+  }
+
+  .d-md-block {
+    display: block;
+  }
+
+  .d-md-flex {
+    display: flex;
+  }
+
+  .hightlight-top,
+.topic-list {
+    max-width: 100%;
+  }
+
+  /*-------------------------------------------------------------index*/
+  .main-topic .topic-list {
+    width: 45%;
+  }
+
+  .main-secondary,
+.main-third {
+    display: block;
+  }
+
+  /*-------------------------------------------------------------cate*/
+}
+@media (max-width: 40em) {
+  .d-sm-none {
+    display: none;
+  }
+
+  .d-sm-block {
+    display: block;
+  }
+
+  .d-sm-flex {
+    display: flex;
+  }
+
+  #main {
+    margin-top: 40px;
+  }
+
+  .main-secondary,
+.main-third {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .hightlight-top__slide-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .hightlight-top__slide-container .hightlight-top__slide-img {
+    order: 1;
+  }
+  .hightlight-top__slide-container .hightlight-top__slide-content {
+    order: 2;
+    padding: 12px 20px 0;
+  }
+
+  .cate-time-hide-pc {
+    padding-bottom: 0;
+    font-size: 12px;
+  }
+
+  .hightlight-top__list,
+.hightlight-bot,
+.home-articles,
+.home-boxnews {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .home-articles {
+    padding-top: 20px;
+  }
+
+  .hightlight-top__list-item {
+    display: flex;
+  }
+  .hightlight-top__list-item .hightlight-top__list-content {
+    flex: 1;
+    padding-right: 15px;
+  }
+  .hightlight-top__list-item .hightlight-top__list-img {
+    flex-shrink: 0;
+    width: 80px;
+  }
+  .hightlight-top__list-item .hightlight-top__list-img .thumb-5x3 {
+    padding-bottom: 100%;
+  }
+  .hightlight-top__list-item:first-child {
+    padding-top: 15px;
+    border-top: 1px solid #eee;
+  }
+
+  .hightlight-top__list-heading {
+    font-size: 17px;
+  }
+  .hightlight-top__list-heading a {
+    font-weight: bold;
+  }
+
+  .hightlight-bot {
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+
+  .hightlight-bot-item {
+    display: flex;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+  .hightlight-bot-item .hightlight-bot-content {
+    flex: 1;
+    order: 1;
+    padding-right: 15px;
+  }
+  .hightlight-bot-item .hightlight-bot-content .hightlight-bot-heading {
+    margin-top: 0;
+  }
+  .hightlight-bot-item .hightlight-bot-img {
+    flex-shrink: 0;
+    width: 80px;
+    order: 2;
+  }
+  .hightlight-bot-item .hightlight-bot-img .thumb-5x3 {
+    padding-bottom: 100%;
+  }
+  .hightlight-bot-item:first-child {
+    padding-top: 15px;
+    margin-top: 15px;
+    border-top: 1px solid #eee;
+  }
+  .hightlight-bot-item:last-child {
+    border-bottom: none;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .home-article {
+    display: block;
+  }
+  .home-article .article-img {
+    width: 100%;
+  }
+  .home-article .article-content {
+    margin-left: 0;
+  }
+
+  .box-event-home-large-wrapper {
+    display: block;
+  }
+
+  .box-event-home-large {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+
+  .box-event-home-large-content {
+    margin-top: 10px;
+  }
+
+  .box-event-home-large-title {
+    font-size: 17px;
+  }
+
+  .box-event-home-small .box-event-home-small-item:first-child {
+    padding-right: 0;
+  }
+  .box-event-home-small .box-event-home-small-item:not(:first-child) {
+    border-left: none;
+    border-top: 1px solid #eee;
+    padding-left: 0;
+    padding-top: 15px;
+    margin-top: 15px;
+  }
+
+  .primary-mb-wrapper {
+    background-color: #e9eaee;
+    padding: 20px;
+  }
+
+  .primary-mb {
+    background-color: #fff;
+    border-radius: 5px;
+  }
+
+  .primary-mb-heading {
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    text-transform: capitalize;
+    padding: 20px;
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+  .primary-mb-heading:not(:empty):after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 30%;
+    height: 3px;
+    background-color: #008837;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+
+  .primary-mb-large-content {
+    padding: 12px 20px 20px;
+  }
+
+  .primary-mb-small {
+    padding: 0 20px;
+  }
+
+  .primary-mb-small-item {
+    padding-top: 15px;
+    border-top: 1px solid #eee;
+  }
+  .primary-mb-small-item:last-child {
+    padding-bottom: 15px;
+  }
+
+  .primary-mb-small-title {
+    display: flex;
+  }
+  .primary-mb-small-title:before {
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin-top: 6px;
+    margin-right: 12px;
+    background: #008837;
+  }
+
+  .box-event-home-large-heading {
+    margin-bottom: 0;
+  }
+
+  .home-article:not(:last-child) {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #eee;
+  }
+
+  #renderComment .special-box-content {
+    margin: 0 20px;
+  }
+  #renderComment .special-box-content:not(:empty) {
+    border-top: thin solid #e9eaee;
+    padding: 15px 0 25px 0;
+  }
+  #renderComment .special-box-content.comment {
+    max-height: 200px;
+    overflow-y: scroll;
+  }
+  #renderComment .special-box-content.comment .title {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 14px;
+  }
+  #renderComment .special-box-content.comment .read-more {
+    color: #008837;
+    margin-top: 22px;
+    font: italic 12px Roboto;
+    padding-bottom: 4px;
+  }
+  #renderComment .special-box-content.comment ul li {
+    margin-bottom: 20px;
+  }
+  #renderComment .special-box-content.comment .sapo {
+    color: #6c6e70;
+    font: normal 12px/17px Roboto, sans-serif;
+    margin-bottom: 9px;
+  }
+  #renderComment .special-box-content.comment .info {
+    font: normal 12px Roboto;
+    color: #6c6e70;
+    line-height: 20px;
+  }
+  #renderComment .special-box-content.comment .info .info-user {
+    font-weight: bold;
+    font-size: 12px;
+    margin-right: 5px;
+  }
+  #renderComment .special-box-content.comment .info .info-user img {
+    width: 20px;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    margin-right: 6px;
+    border-radius: 100%;
+    margin-bottom: -5px;
+  }
+  #renderComment .special-box-content.comment .info .time {
+    padding-left: 10px;
+    position: relative;
+  }
+
+  .pub-date {
+    display: none;
+  }
+
+  .home-boxnews-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px 20px;
+  }
+
+  .read-more {
+    display: block;
+    height: 50px;
+    text-align: center;
+    color: #8f8f8f;
+    font: normal 13px/50px Roboto;
+    border-top: 1px solid #eee;
+    margin-top: 10px;
+  }
+  .read-more img {
+    display: inline-block;
+    width: 13px;
+    height: 11px;
+    margin-left: 12px;
+  }
+
+  .home-boxnews {
+    border-bottom: 8px solid #e9eaee;
+  }
+
+  .read-more-block-heading {
+    border-bottom: 1px solid #eee;
+  }
+
+  .footer {
+    background-color: #202124;
+    padding: 30px 20px 0 20px;
+    text-align: justify;
+    color: #6c6e70;
+    font: normal 12px/20px Roboto;
+    margin-top: 20px;
+  }
+  .footer p {
+    font-size: 14px;
+    padding-bottom: 15px;
+  }
+  .footer .footer-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer .footer-bottom {
+    margin: 0 -20px;
+    background: #3d3d3d;
+    color: #8f8f8f;
+    font: normal 11px/16px Roboto;
+    padding: 15px 20px 11px 20px;
+  }
+
+  #back-top {
+    bottom: 9rem;
+  }
+
+  .main-top {
+    padding: 0;
+  }
+
+  /*-------------------------------------------------------------  cate*/
+  .primary-cate {
+    margin-bottom: 0;
+  }
+
+  .primary-cate-content {
+    padding: 12px 20px;
+  }
+
+  .breadcum-mb-heading,
+.breadcum-mb-item,
+.breadcum-mb-item .title-cate {
+    display: flex;
+    align-items: center;
+  }
+
+  .breadcum-mb-item a {
+    display: block;
+    margin-left: 4px;
+    margin-right: 4px;
+  }
+
+  .breadcum-mb-list {
+    position: relative;
+    padding: 12px 12px 0;
+    box-sizing: border-box;
+    background: #e9e9e9;
+    white-space: nowrap;
+    overflow-y: scroll;
+    display: none;
+  }
+  .breadcum-mb-list.show {
+    display: block;
+  }
+  .breadcum-mb-list li {
+    display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 12px;
+    vertical-align: text-top;
+  }
+  .breadcum-mb-list li a {
+    height: 100%;
+    font-size: 13px;
+    line-height: 26px;
+    display: block;
+    padding: 0 10px;
+    color: #555;
+    font-weight: bold;
+    display: inline-block;
+    background: #fff;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-decoration: none;
+  }
+
+  .read-lot-mb-item {
+    display: flex;
+  }
+  .read-lot-mb-item:not(:last-child) {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+  .read-lot-mb-item .read-lot-mb-number {
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  .read-lot-mb-item .read-lot-mb-title {
+    padding-right: 10px;
+    flex: 1;
+  }
+  .read-lot-mb-item .read-lot-mb-img {
+    width: 80px;
+    flex-shrink: 0;
+  }
+  .read-lot-mb-item .read-lot-mb-img .thumb-5x3 {
+    padding-bottom: 100%;
+  }
+
+  /*====================================================================== talk*/
+  .talk-container {
+    padding: 20px;
+  }
+
+  .talk-top {
+    margin-bottom: 20px;
+  }
+
+  .talk-top-item,
+.talk-bot-item {
+    padding: 20px 0;
+    border-bottom: thin solid #e9eaee;
+  }
+  .talk-top-item:first-child,
+.talk-bot-item:first-child {
+    padding-top: 0;
+  }
+
+  .talk-bot-item:last-child {
+    border-bottom: none;
+  }
+
+  .talk-top-heading,
+.talk-bot-heading {
+    font-size: 20px;
+  }
+
+  /*====================================================================== detail*/
+  .detail-main,
+.dt-content,
+.tags,
+.box-cmt,
+.read-other-heading {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .sticky-ele,
+.date-select {
+    display: none !important;
+  }
+
+  .box-related,
+.box-dvdesc {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .box-related-item {
+    margin: 0;
+  }
+  .box-related-item .box-related-img {
+    width: 30%;
+  }
+
+  .box-dvdesc {
+    display: block;
+  }
+  .box-dvdesc .fb-page {
+    margin-top: 20px;
+  }
+
+  .line-share .btn-cmt .cls-1 {
+    fill: #fe0000;
+  }
+
+  .advertisement-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .advertisement-container .advertisement-item:first-child {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .advertisement-container .advertisement-title {
+    font-size: 15px;
+  }
+
+  .box-samecat .sc-heading {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .box-samecat .sc-heading h3 {
+    color: #111;
+  }
+  .box-samecat .advertisement-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .box-samecat .advertisement-item:first-child {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .hot-news .advertisement-heading, .hot-news .hot-news-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .hot-news .hightlight-top__list {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  /*====================================================================== ema*/
+  .ema-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .ema-container figure.expNoEdit {
+    margin-left: -20px !important;
+    margin-right: -20px !important;
+  }
+
+  .ema-container figure.expNoEdit.right {
+    width: 100% !important;
+    max-width: 100%;
+    margin-left: 0 !important;
+    float: unset;
+  }
+
+  /*====================================================================== detail image*/
+  figure.expNoEdit[type=Photo] {
+    width: 100%;
+    margin: auto;
+  }
+
+  .detail-images {
+    padding-top: 20px;
+  }
+
+  /*====================================================================== contact*/
 }
 
 /*# sourceMappingURL=style.css.map */
