--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -106,6 +106,10 @@ img {
   max-width: 67.5rem;
   margin: 0 auto;
 }
+.w-1140 {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 .w-100 {
   width: 100%;
 }
