--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -22,6 +22,10 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  & .icon {
+    width: 16px;
+    height: auto;
+  }
 }
 .title {
   display: block;
