--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,40 @@ img {
   object-fit: cover;
 }
 
+.image-wrapper {
+  position: relative;
+  display: block;
+  padding-bottom: 60%;
+}
+
+.image-wrapper-full {
+  position: relative;
+  display: block;
+  padding-bottom: 100%;
+}
+
+.image-wrapper-120 {
+  position: relative;
+  display: block;
+  padding-bottom: 120%;
+}
+
+.image-wrapper-150 {
+  position: relative;
+  display: block;
+  padding-bottom: 150%;
+}
+
+.image-wrapper img,
+.image-wrapper-full img,
+.image-wrapper-120 img,
+.image-wrapper-150 img {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 /*=================================================================*/
 .text-gray-33 {
   color: #333;
@@ -770,6 +804,15 @@ img {
   -o-border-radius: 0.375rem;
 }
 
+.border-full {
+  border-radius: 999px;
+  -webkit-border-radius: 999px;
+  -moz-border-radius: 999px;
+  -ms-border-radius: 999px;
+  -o-border-radius: 999px;
+  overflow: hidden;
+}
+
 /*=================================================================*/
 .fix-text {
   display: -webkit-box;
@@ -872,6 +915,14 @@ img {
 
 .justify-content-center {
   justify-content: center;
+}
+
+.flex-0 {
+  flex-shrink: 0;
+}
+
+.flex-1 {
+  flex: 1;
 }
 
 .wrapper {
@@ -1769,7 +1820,12 @@ header #nav .icon-expandmenu.active {
 [data-icontype="2"] .thumb-item,
 [data-icontype="3"] .thumb-item,
 [data-icontype="20"] .thumb-item,
-[data-icontype="27"] .thumb-item {
+[data-icontype="27"] .thumb-item,
+[data-icontype="1"] .image-wrapper,
+[data-icontype="2"] .image-wrapper,
+[data-icontype="3"] .image-wrapper,
+[data-icontype="20"] .image-wrapper,
+[data-icontype="27"] .image-wrapper {
   position: relative;
 }
 
@@ -1777,7 +1833,12 @@ header #nav .icon-expandmenu.active {
 .box-other [data-icontype="1"] .thumb-item:before,
 .widget [data-icontype="1"] .thumb-item:before,
 .home-articles [data-icontype="1"] .thumb-item:before,
-[data-icontype="1"] .thumb-item:before {
+[data-icontype="1"] .thumb-item:before,
+.home-hightlight [data-icontype="1"] .image-wrapper:before,
+.box-other [data-icontype="1"] .image-wrapper:before,
+.widget [data-icontype="1"] .image-wrapper:before,
+.home-articles [data-icontype="1"] .image-wrapper:before,
+[data-icontype="1"] .image-wrapper:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1819,7 +1880,10 @@ header #nav .icon-expandmenu.active {
 
 .home-hightlight [data-icontype="20"] .thumb-item:before,
 .home-articles [data-icontype="20"] .thumb-item:before,
-[data-icontype="20"] .thumb-item:before {
+[data-icontype="20"] .thumb-item:before,
+.home-hightlight [data-icontype="20"] .image-wrapper:before,
+.home-articles [data-icontype="20"] .image-wrapper:before,
+[data-icontype="20"] .image-wrapper:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1835,7 +1899,12 @@ header #nav .icon-expandmenu.active {
 .widget [data-icontype="2"] .thumb-item:before,
 .home-hightlight [data-icontype="3"] .thumb-item:before,
 .home-articles [data-icontype="3"] .thumb-item:before,
-[data-icontype="3"] .thumb-item:before {
+[data-icontype="3"] .thumb-item:before,
+.home-boxnewday [data-icontype="2"] .image-wrapper:before,
+.widget [data-icontype="2"] .image-wrapper:before,
+.home-hightlight [data-icontype="3"] .image-wrapper:before,
+.home-articles [data-icontype="3"] .image-wrapper:before,
+[data-icontype="3"] .image-wrapper:before {
   content: "";
   position: absolute;
   bottom: 10px;
@@ -1897,8 +1966,8 @@ header #nav .icon-expandmenu.active {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 26px;
-  padding-bottom: 25px;
-  margin-bottom: 25px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
   border-bottom: 3px solid #008837;
 }
 
@@ -2398,6 +2467,199 @@ header #nav .icon-expandmenu.active {
 }
 .box-bot .boxbot-right-container:hover::after {
   content: none;
+}
+
+.hot-topic {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #008837;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.hot-topic__left {
+  display: flex;
+  align-items: center;
+  color: #525252;
+  border-radius: 4px;
+  border: 1px solid #E9EAEE;
+  background: #F9F9F9;
+  padding: 8px 12px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  margin-right: 17px;
+  flex-shrink: 0;
+}
+.hot-topic__icon {
+  width: 9px;
+  height: auto;
+  flex-shrink: 0;
+}
+.hot-topic__title {
+  flex: 1;
+}
+.hot-topic__right {
+  position: relative;
+  flex: 1;
+  overflow: hidden;
+}
+.hot-topic__right::after {
+  content: "";
+  background: linear-gradient(270deg, #FFF 0%, rgba(255, 255, 255, 0) 100%);
+  width: 36px;
+  height: 100%;
+  display: block;
+  right: 0;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+.hot-topic__list {
+  display: flex;
+  align-items: center;
+  animation: scroll-horizontal 15s linear infinite;
+}
+.hot-topic__text {
+  color: #018938;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  padding: 8px;
+  background-color: #f9f9f9;
+  margin-right: 12px;
+  flex-shrink: 0;
+  display: block;
+}
+.hot-topic__text:hover {
+  background-color: #EFEFEF;
+}
+
+@keyframes scroll-horizontal {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+.widget-secondary {
+  border-radius: 5px;
+  background-color: #efe1d3;
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+}
+.widget-secondary .boxnewsleft-small .item {
+  border-top: 1px solid #E7D9CC;
+}
+
+.main-tertiary {
+  margin-bottom: 24px;
+  background-color: #dedede;
+}
+.main-tertiary__heading {
+  background-image: url("../images/box-hoi-nong-dan-banner.png");
+  background-position: -75px;
+  background-repeat: no-repeat;
+  background-color: #98ca3d;
+  height: 57px;
+  border: none;
+  position: relative;
+  padding: 12px;
+}
+.main-tertiary__heading .title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: capitalize;
+  margin-right: 12px;
+}
+.main-tertiary__heading .list {
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  padding-right: 12px;
+  line-height: 14px;
+  justify-content: flex-end;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.main-tertiary__heading .list .items:not(:last-child) .link::after {
+  content: "/";
+  padding: 0 5px;
+}
+.main-tertiary__content {
+  display: grid;
+  grid-template-columns: 1fr 250px 300px;
+  grid-gap: 12px;
+  gap: 12px;
+}
+.main-tertiary__right .heading-children {
+  background-image: url("../images/layer.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 21px;
+  color: #fff;
+  display: block;
+  text-align: center;
+  padding: 10px;
+  text-transform: uppercase;
+}
+.main-tertiary__right .heading-children span {
+  display: block;
+}
+.main-tertiary__right .description {
+  background-color: #fff4e2;
+  padding: 13px 10px;
+  display: flex;
+}
+.main-tertiary__right .description .article-img {
+  width: 95px;
+  flex-shrink: 0;
+}
+.main-tertiary__right .description .article-content {
+  padding-left: 12px;
+}
+.main-tertiary__right .description .title {
+  font-size: 12px;
+  color: #008946;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.widget-tertiary {
+  border: 3px solid #08080a;
+  background-color: #EFE1D3;
+}
+.widget-tertiary .heading {
+  background-color: #08080a;
+  display: flex;
+  padding: 4px 12px;
+}
+.widget-tertiary .heading .icon {
+  width: 55px;
+  height: auto;
+  margin-top: -10px;
+  margin-bottom: -5px;
+}
+.widget-tertiary .heading .title {
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  font-size: 15px;
+  text-align: right;
+  font-weight: bold;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .breadcum {
