--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -93,6 +93,7 @@ img {
 .font-helvetica {
   font-family: "Helvetical", serif;
 }
+
 /*===========================================================================*/
 .w-650 {
   max-width: 40.625rem;
@@ -214,6 +215,41 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+
+.image-wrapper {
+  position: relative;
+  display: block;
+  padding-bottom: 60%;
+}
+
+.image-wrapper-full {
+  position: relative;
+  display: block;
+  padding-bottom: 100%;
+}
+
+.image-wrapper-120 {
+  position: relative;
+  display: block;
+  padding-bottom: 120%;
+}
+
+.image-wrapper-150 {
+  position: relative;
+  display: block;
+  padding-bottom: 150%;
+}
+
+.image-wrapper img,
+.image-wrapper-full img,
+.image-wrapper-120 img,
+.image-wrapper-150 img {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 /*=================================================================*/
 .text-gray-33 {
@@ -518,6 +554,14 @@ img {
   -ms-border-radius: 0.375rem;
   -o-border-radius: 0.375rem;
 }
+.border-full {
+  border-radius: 999px;
+  -webkit-border-radius: 999px;
+  -moz-border-radius: 999px;
+  -ms-border-radius: 999px;
+  -o-border-radius: 999px;
+  overflow: hidden;
+}
 /*=================================================================*/
 .fix-text {
   display: -webkit-box;
@@ -601,4 +645,10 @@ img {
 }
 .justify-content-center {
   justify-content: center;
+}
+.flex-0 {
+  flex-shrink: 0;
+}
+.flex-1 {
+  flex: 1;
 }
